apps/paperless-ngx/paperless-ngx-deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "paperless-ngx"
  labels:
    app: "paperless-ngx"
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "paperless-ngx"
  template:
    metadata:
      labels:
        app: "paperless-ngx"
        app.kubernetes.io/name: "paperless-ngx"
        app.kubernetes.io/component: "paperless-ngx"
        app.kubernetes.io/instance: "paperless-ngx-prod"
        app.kubernetes.io/part-of: "paperless-ngx"
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: "RuntimeDefault"
      containers:
        - name: "paperless-ngx"
          image: "ghcr.io/paperless-ngx/paperless-ngx:3.3.0"
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              memory: "512Mi"
              cpu: "50m"
            limits:
              memory: "2048Mi"
          ports:
            - containerPort: 8000
              name: "paperless-ngx"
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - "ALL"
          livenessProbe:
            tcpSocket:
              port: "paperless-ngx"
            initialDelaySeconds: 30
          readinessProbe:
            tcpSocket:
              port: "paperless-ngx"
            initialDelaySeconds: 5
          startupProbe:
            tcpSocket:
              port: "paperless-ngx"
            failureThreshold: 60
            periodSeconds: 10
          volumeMounts:
            - name: "entrypoint"
              mountPath: "/usr/local/bin/paperless_cmd.sh"
              subPath: "paperless_cmd.sh"
            - name: "storage"
              mountPath: "/mnt/data"
            - name: "consumption"
              mountPath: "/mnt/consume"
            - name: "tmp"
              mountPath: "/tmp"
      volumes:
        - name: "storage"
          emptyDir:
            sizeLimit: "1Gi"
        - name: "consumption"
          emptyDir:
            sizeLimit: "1Gi"
        - name: "tmp"
          emptyDir:
            sizeLimit: "1Gi"
        - name: "entrypoint"
          configMap:
            name: "entrypoint-script"
            defaultMode: 365
