apps/paperless-ngx/paperless-ngx-service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "paperless-ngx"
spec:
  ports:
    - port: 80
      targetPort: "paperless-ngx"
  selector:
    app: "paperless-ngx"
